--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,9 @@
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  margin-left: 80vh;
-  margin-right: 80vh;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 2rem;
   background-color: aquamarine;
 }
 
